--- a/src/error.html
+++ b/src/error.html
@@ -55,11 +55,9 @@
 		.btn-secondary {
 			background: transparent;
 			color: #0a84ff;
-			border: 1px solid rgba(255, 255, 255, 0.2);
+			border: none;
 		}
-		.btn-secondary:hover {
-			background: rgba(255, 255, 255, 0.05);
-		}
+		/* .btn-secondary:hover removed - no hover effect for blue text buttons */
 	</style>
 </head>
 <body>
